before entity generation
